@@ -27,6 +27,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.security.SecureRandom;
 import java.util.Arrays;
+import java.util.List;
 
 
 @Configuration
@@ -37,10 +38,9 @@ import java.util.Arrays;
 public class WebSecurityConfig {
 
     @Autowired
-    private AuthEntryPointJwt unauthorizedHandler;
-
-    @Autowired
     UserDetailsServiceImpl userDetailsService;
+    @Autowired
+    private AuthEntryPointJwt unauthorizedHandler;
 
     @Bean
     public AuthTokenFilter authenticationJwtTokenFilter() {
@@ -72,7 +72,7 @@ public class WebSecurityConfig {
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception{
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
         return authConfig.getAuthenticationManager();
     }
 
@@ -81,35 +81,16 @@ public class WebSecurityConfig {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .csrf(AbstractHttpConfigurer::disable)
-                .exceptionHandling(exception-> exception.authenticationEntryPoint(unauthorizedHandler))
+                .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth ->
                         auth.requestMatchers("/api/auth/**").permitAll()
-                                //.requestMatchers("/api/auth/register").permitAll()
-                                //.requestMatchers("/api/auth/verifyEmail").permitAll()
-                                //.requestMatchers("/api/auth/login").permitAll()
-                                //.requestMatchers("/api/auth/logout").permitAll()
                                 .requestMatchers("/api/get/**").permitAll()
                                 .requestMatchers("/api/user-management/forgotPassword").permitAll()
                                 .requestMatchers("/api/user-management/resetPassword").permitAll()
-                            .anyRequest().authenticated()
+                                .requestMatchers("/api/ws/**").permitAll()
+                                .anyRequest().authenticated()
                 )
-                /*old
-                .authorizeRequests((requests) -> requests
-                        .requestMatchers( "/register").permitAll()
-                        .anyRequest().authenticated()
-                )
-                .formLogin((form) -> form
-                        .loginPage("https://localhost:3000/login")
-                        // https://www.baeldung.com/spring-redirect-after-login
-                        .defaultSuccessUrl("https://localhost:3000/home", true)
-                        .permitAll()
-                )
-                .logout((logout) -> logout
-                        .logoutSuccessUrl("https://localhost:3000/home")
-                        .permitAll()
-                )
-                */
         ;
 
         http.authenticationProvider(authenticationProvider());
@@ -123,8 +104,8 @@ public class WebSecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET","POST","OPTIONS"));
+        configuration.setAllowedOrigins(List.of("https://furchert.ch", "http://localhost:80", "https://localhost:443", "https://localhost:33"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type", "Requestor-Type"));
         configuration.setExposedHeaders(Arrays.asList("ResponseMessage", "X-Get-Header"));
 
